theme/base.css
/* ... */
blockquote p:last-child {
	margin-bottom:	0;
}

/* スマホ用出力。PC用出力 */
.sp .for-pc {
	display:	none;
}
body:not(.sp) .for-sp {
	display:	none;
}
body:not(.amp) .for-amp {
	display:	none;
}

/* pre, math, table-container */
pre {
	font-family:		monospace;
	overflow-x:		auto;
}
div.math {
	overflow-x:		auto;
}
article div.table-container {
	overflow-x:	scroll;
}

/* フロートオブジェクト */
.float, .float-l {
	float:		left;
	margin-right:	1em;
	position:	relative;
	z-index:	1;
}
.float-r {
	float:		right;
	margin-left:	1em;
	position:	relative;
	z-index:	1;
}
/* 記事からはみ出し防止 */
h3, h4, .clear,
div.body-footer {
	clear:		both;
}

/*--------------------------------------------------------------------
●記法関連 / RST (reStructuredText)
--------------------------------------------------------------------*/
/* 列挙型 */
ol.arabic	> li { list-style-type: decimal; }
ol.upper-alpha	> li { list-style-type: upper-alpha; }
ol.lower-alpha	> li { list-style-type: lower-alpha; }
ol.upper-roman	> li { list-style-type: upper-roman; }
ol.lower-roman	> li { list-style-type: lower-roman; }

/* option list */
.body table.option-list th {
	font-weight:	normal;
	text-align:	left;
}
.body table.option-list th var {
	font-style:	italic;
	font-weight:	bold;
}

.line-block {
	margin:		1em 0 1em 2em;
	font-style:	italic;
}
.line-block .line-block {
	margin:		0 0 0 2em;
}
div.citation {
	margin:		1em 0 1em 2em;
}
article section .rest-footnote a {
	font-size:		70%;
	line-height:		140%;
	vertical-align:		top;
	text-decoration:	none;
	border-bottom-width:	1px;
	border-bottom-style:	dotted;
}
article section .rest-footnote a:hover {
	border-bottom-style:	solid;
}
.problematic {
	color:			red;
	text-decoration:	underline;
}

div.admonition, div.topic {
	background-color:	rgba(255,210,210,0.7);
	border:			1px solid #888;
	margin:			1em 0;
	padding:		0.2em 1em;
}
div.admonition.note, div.topic {
	background-color:	rgba(128,128,128,0.1);
}
p.admonition-title,
p.topic-title,
p.sidebar-title {
	font-weight:		bold;
	font-size:		130%;
	text-indent:		0;
	margin-top:		0;
	text-decoration:	underline;
}
div.sidebar {
	min-width:		15%;
	max-width:		40%;
	border:			1px solid #ccc;
	background-color:	rgba(255,255,232,0.6);
	margin-left:		1em;
	padding:		0 0.5em;
	float:			right;
}

.align-left {
	float:			left;
	margin-right:		1em;
}
.align-right {
	float:			right;
	margin-left:		1em;
}
figure.align-center {
	text-align:		center;
}
figure.align-center,
.align-center > img {
	display:		block;
	margin-left:		auto;
	margin-right:		auto;
}
.align-top    img { vertical-align: top; }
.align-bottom img { vertical-align: bottom; }
.align-middle img { vertical-align: middle; }

.line-number-block {
	color:			blue;
	float:			left;
	margin-right:		1em;
	padding-right:		2px;
	border-right:		solid rgba(0,0,0,0.3) 1px;
	text-align:		right;
}

pre.line-number {
	white-space:		pre;
}
p.rubric {
	margin-top:		30px;
	font-weight:		bold;
}
div.compound p:nth-child(n + 2) {
	text-indent:		0;
}

/*--------------------------------------------------------------------
●フォントサイズ／種類設定
--------------------------------------------------------------------*/
.xx-large, .Huge	{ font-size: 200%; line-height: 130%; }
.x-large,  .huge	{ font-size: 150%; line-height: 130%; }
.large			{ font-size: 130%; line-height: 130%; }
.midium, .normalsize	{ font-size: 100%; line-height: 135%; }
.small			{ font-size: 90%;  line-height: 140%; }
.x-small,  .tiny	{ font-size: 80%;  line-height: 140%; }
.xx-small, .scriptsize	{ font-size: 60%;  line-height: 140%; }

.it, .italic		{ font-style:  italic; }
.bf, .bold		{ font-weight: bold;   }
.u, .underline		{ text-decoration: underline; }
.normal			{ font-weight: normal; text-decoration: none; }

strong			{ font-weight: bold; }
em			{ font-style: normal; text-decoration: underline; }

/*--------------------------------------------------------------------
●フォーム関連
--------------------------------------------------------------------*/
form + form {
	margin-top:		2em;
}

/* webkit default override */
input {
	box-sizing:		content-box;
}
input[type="number"] {
	text-align:		right;
}
label, input, button, select {
	vertical-align:		middle;
}
td.checkbox, th.checkbox {
	text-align:		center;
}
td.button, th.button {
	text-align:		center;
}

/* ボタンデザイン */
button {
	padding:		3px 6px;
	text-indent:		0;
	line-height:		100%;
	vertical-align:		middle;
	font-family:		"メイリオ","IPAGothic","VL Gothic",sans-serif;

	cursor:			pointer;
}
#edit-helper button {
	padding:		3px 4px;
	margin:			2px 0px;
}
#com textarea {
	-moz-tab-size:	4;
	-o-tab-size:	4;
	tab-size:	4;
	max-width:	100%;
	box-sizing:	border-box;
}

input[type="radio"]    + label,
input[type="checkbox"] + label {
	margin:		0 0 0 1px;
}

/* radioやcheckboxが複数並んだ場合 */
label + input[type="radio"],
label + input[type="checkbox"]
{
	margin-left:	1em;
}

/* ボタンが複数並んだ場合に間あける */
button + button
{
	margin-left:	1em;
}
#sidebar button
{
	margin-left:	0;
}

/* 色選択ボックス */
span.colorbox {
	height:		1em;
	width:		1em;
	border:		1px solid #000;
	display:	inline-block;

	vertical-align: 	middle;
	border-radius:		4px;
	margin-right:		4px;
}
.color-picker {
	width:		70px;
	vertical-align: middle;
}
.colorpicker {
	z-index:	10000;
}

option:disabled {
	background-color:	#eee;
}
/* セレクトボックスの特殊要素（「指定しない」）など */
option.special {
	font-weight:		bold;
	color:			#800;
}
/* readonly */
input[readonly],
select[readonly],
textarea[readonly] {
	background-color:	#ddd;
}

textarea {
	display:		block;
}

/*--------------------------------------------------------------------
●preコピー機能
--------------------------------------------------------------------*/
article.article pre {
	position:	relative;
}
/* ... */

